fix: title fz, added overflow mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1513,7 +1513,7 @@ body {
   cursor: pointer;
 }
 
-.footer-logo {
+.footer__logo {
   -ms-grid-row: 1;
   -ms-grid-row-span: 2;
   grid-row: 1 / 3;
@@ -1794,6 +1794,9 @@ body {
   .reviews-title {
     font-size: 30px;
   }
+  .packages-title {
+    font-size: 30px;
+  }
   .cards-hotels {
     -ms-grid-columns: (1fr)[2];
         grid-template-columns: repeat(2, 1fr);
@@ -1812,9 +1815,9 @@ body {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
-    grid-row-gap: 80px;
+    grid-row-gap: 120px;
   }
-  .footer-logo {
+  .footer__logo {
     width: 104px;
     -ms-flex-item-align: self-start;
         -ms-grid-row-align: self-start;
@@ -1953,12 +1956,16 @@ body {
         -ms-flex-align: center;
             align-items: center;
     max-width: 100%;
+    padding: 31px 37px;
   }
   .navbar-menu__item {
     margin-bottom: 20px;
   }
   .navbar-menu__item--mobile--visible {
     display: block;
+  }
+  .search__input {
+    width: 245px;
   }
   .user__name {
     margin: 10px 0 0 0;
@@ -2056,9 +2063,6 @@ body {
   .cards-hotels__btn {
     padding: 8px 17px;
   }
-  .packages-title {
-    font-size: 25px;
-  }
   .footer__wrapper {
     -ms-grid-columns: (1fr)[6];
         grid-template-columns: repeat(6, 1fr);
@@ -2092,6 +2096,13 @@ body {
     -ms-grid-column: 1;
     -ms-grid-column-span: 6;
     grid-column: 1 / 7;
+  }
+}
+
+@media (max-width: 768px) and (max-height: 480px) {
+  .navbar-menu {
+    height: 250px;
+    overflow: scroll;
   }
 }
 
@@ -2144,6 +2155,9 @@ body {
   .card__image {
     width: 100%;
   }
+  .packages-title {
+    font-size: 25px;
+  }
   .cards-hotels {
     -ms-grid-columns: (100%)[1];
         grid-template-columns: repeat(1, 100%);
@@ -2179,6 +2193,9 @@ body {
         grid-template-columns: repeat(1, 1fr);
     grid-row-gap: 30px;
   }
+  .footer__logo img {
+    width: 104px;
+  }
   .footer__social {
     -ms-grid-column: 1;
     -ms-grid-column-span: 1;
@@ -2204,9 +2221,9 @@ body {
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
     grid-column: 1 / 3;
-    -ms-grid-row: 3;
+    -ms-grid-row: 5;
     -ms-grid-row-span: 1;
-    grid-row: 3 / 4;
+    grid-row: 5 / 6;
   }
   .footer__additional {
     -ms-grid-column: 1;
@@ -2220,9 +2237,9 @@ body {
     -ms-grid-column: 1;
     -ms-grid-column-span: 6;
     grid-column: 1 / 7;
-    -ms-grid-row: 5;
+    -ms-grid-row: 3;
     -ms-grid-row-span: 1;
-    grid-row: 5 / 6;
+    grid-row: 3 / 4;
   }
   .footer__contact-details {
     -ms-grid-column: 1;
