--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -88,7 +88,9 @@
       &__item
         &::after,&::before
           display: none
-
+    &-title
+      font-size: 30px
+  .packages
     &-title
       font-size: 30px
   .cards-hotels
@@ -104,8 +106,8 @@
       grid-template-columns: 200px 260px 200px
       grid-auto-rows: minmax(100px, min-content)
       justify-content: space-between
-      grid-row-gap: 80px
-    &-logo
+      grid-row-gap: 120px
+    &__logo
       width: 104px
       align-self: self-start
       grid-column: 1
@@ -183,11 +185,15 @@
       flex-direction: column
       align-items: center
       max-width: 100%
+      padding: 31px 37px
       &__item
         margin-bottom: 20px
         &--mobile
           &--visible
             display: block
+  .search
+    &__input
+      width: 245px
   .user
     &__name
       margin: 10px 0 0 0
@@ -258,9 +264,6 @@
         font-size: 18px
     &__btn
       padding: 8px 17px
-  .packages
-    &-title
-      font-size: 25px
   .footer
     &__wrapper
       grid-template-columns: repeat(6, 1fr)
@@ -278,6 +281,12 @@
     &__send
       &-form
         grid-column: 1 / 7
+@media (max-width:768px) and (max-height: 480px)
+  .navbar
+    &-menu
+      height: 250px
+      overflow: scroll
+
 @media (max-width: 600px)
   .reviews
     &-slider
@@ -321,6 +330,9 @@
     flex-basis: 100%
     &__image
       width: 100%
+  .packages
+    &-title
+      font-size: 25px
   .cards-hotels
     grid-template-columns: repeat(1, 100%)
     grid-gap: 30px 0
@@ -343,6 +355,9 @@
     &__wrapper
       grid-template-columns: repeat(1, 1fr)
       grid-row-gap: 30px
+    &__logo
+      img
+        width: 104px
     &__social
       grid-column: 1 / 2
       grid-row: 2 / 3
@@ -354,13 +369,13 @@
         margin-bottom: 20px
     &__categories
       grid-column: 1 / 3
-      grid-row: 3 / 4
+      grid-row: 5 / 6
     &__additional
       grid-column: 1 / 5
       grid-row: 4 / 5
     &__legal
       grid-column: 1 / 7
-      grid-row: 5 / 6
+      grid-row: 3 / 4
     &__contact
       &-details
         grid-column: 1 / 7
